--- a/templates/Person/new.html.twig
+++ b/templates/Person/new.html.twig
@@ -9,6 +9,6 @@
     {{ form_row(form.lastname, {'attr': {'class': 'form-control mt-2'}}) }}
     {{ form_row(form.group, {'attr': {'class': 'form-control mt-2'}}) }}
     {{ form_row(form._token) }}
-     <button class="mt-2" type="submit">Register!</button>
+     <button class="mt-2" type="submit">Add!</button>
   </div>
 {% endblock %}
