--- a/templates/Person/list.html.twig
+++ b/templates/Person/list.html.twig
@@ -25,7 +25,7 @@
       {# <td><a href="/person/{{person.id}}/delete" class="btn btn-danger active" role="button" aria-pressed="true">delete</a></td> #}
       <form action="/Persons/{{person.id}}/delete" method="POST">
         {# <td><a href="/person/{{person.id}}/delete" class="btn btn-danger active" role="button" aria-pressed="true">delete</a></td> #}
-        <td><button class="btn btn-danger">dupa</button></td>
+        <td><button class="btn btn-danger">delete</button></td>
         <input type="hidden" name="_method" value="DELETE">
       </form>
     </tr>
