--- a/templates/Group/list.html.twig
+++ b/templates/Group/list.html.twig
@@ -8,6 +8,8 @@
       <th scope="col">Info</th>
       <th scope="col">Created at</th>
       <th scope="col">Updated at</th>
+      <th scope="col">Edit</th>
+      <th scope="col">Delete</th>
     </tr>
   </thead>
   <tbody>
