--- a/templates/Group/list.html.twig
+++ b/templates/Group/list.html.twig
@@ -1,7 +1,9 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<table class="table">
+<a class="btn btn-primary float-right mr-2 mb-2" href="/Group/new" role="button">Add</a>
+{% if groups %}
+<table class="table mt-5">
   <thead>
     <tr>
       <th scope="col">Name</th>
@@ -19,9 +21,9 @@
       <td>{{group.info}}</td>
       <td>{{group.createdat.date}}</td>
       <td>{{group.updatedat.date}}</td>
-      <td><a href="/groups/{{group.id}}/edit" class="btn btn-primary active" role="button" aria-pressed="true">edit</a></td>
+      <td><a href="/Group/{{group.id}}/edit" class="btn btn-primary active" role="button" aria-pressed="true">edit</a></td>
       {# celowo nie używałem symfony forms w tym miejscu #}
-      <form action="/Groups/{{group.id}}/delete" method="POST">
+      <form action="/Group/{{group.id}}/delete" method="POST">
         <td><button class="btn btn-danger">Delete</button></td>
         <input type="hidden" name="_method" value="DELETE">
       </form>
@@ -29,4 +31,8 @@
     {% endfor %}
   </tbody>
 </table>
+{% else %}
+  There are no groups in the system
+{% endif %}
+
 {% endblock %}
