--- a/templates/inc/navbar.html.twig
+++ b/templates/inc/navbar.html.twig
@@ -4,10 +4,10 @@
       <a class="nav-link" href="/">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="Person">People</a>
+      <a class="nav-link" href="/Person">People</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="Group">Groups</a>
+      <a class="nav-link" href="/Group">Groups</a>
     </li>
   </ul>
 </nav>
